src/main/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-quarkus
spec:
  paused: true
  selector:
    matchLabels:
      app: todo-api-quarkus
  template:
    metadata:
      labels:
        app: todo-api-quarkus
    spec:
      containers:
        - name: todo-api-quarkus
          image: todo-api-quarkus
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
      serviceAccountName: todo-api-quarkus
