src/main/openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo-api-quarkus
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
  type: ClusterIP
  selector:
    app: todo-api-quarkus
